# mkdocs-curriculum-vitae

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  taskfile.yml
.config/linters/: djlint.json
.github/: PULL_REQUEST_TEMPLATE.md
.taskfiles/: documentation.yml  mkdocs.yml
contributing/: index.html
docs/: contributing.md  how-to-use-it.md  index.md
how-to-use-it/: index.html
search/: search_index.json
src/mkdocs_curriculum_vitae/: 404.html  head.html  main.html  mkdocs_theme.yml  scripts.html
src/mkdocs_curriculum_vitae/assets/: mkdocs_curriculum_vitae.css
src/mkdocs_curriculum_vitae/assets/layouts/: default.css  vertical.css
src/mkdocs_curriculum_vitae/assets/themes/: default.css  minimalist.css  neon.css  nes.css
src/mkdocs_curriculum_vitae/layouts/: default.html
src/mkdocs_curriculum_vitae/layouts/default/: layout.css  layout.html
src/mkdocs_curriculum_vitae/layouts/vertical/: layout.css
tests/fixtures/test_doc/: mkdocs.yml
