[project]
name = "mkdocs-curriculum-vitae"
version = "0.1.0"
description = "MkDocs Theme for curriculum vitae"
readme = "README.md"
authors = [
  {name = "Paul Riviere", email = "paolo3799@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: POSIX",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development :: Build Tools",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Topic :: Utilities",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "mkdocs>=1.5.3",
]

[project.urls]
Documentation = "https://paul-riviere.github.io/mkdocs-curriculum-vitae/"
Issues = "https://github.com/Paul-Riviere/mkdocs-curriculum-vitae/issues"
Source = "https://github.com/Paul-Riviere/mkdocs-curriculum-vitae"

[project.entry-points."mkdocs.themes"]
curriculum-vitae = "mkdocs_curriculum_vitae"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
